tests/error/arg_res.gw
// [skip] this is reserved
function void test(int this){}
